<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip">
 
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dip">
       	<TextView
	        android:id="@+id/nameTag"         
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:textSize="15sp"
	        android:textColor="@color/text_color_maroon"
	        android:gravity="center"
	        android:text="@string/name"/>
	    <TextView
	        android:id="@+id/nameVal"         
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:textSize="15sp"
	        android:textColor="@color/text_color_maroon"
	        android:gravity="center"
	        android:text=""/>       	
    </LinearLayout>
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dip">
       	<TextView
	        android:id="@+id/emailTag"         
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:textSize="15sp"
	        android:textColor="@color/text_color_maroon"
	        android:gravity="center"
	        android:text="@string/email"/>
	    <TextView
	        android:id="@+id/emailVal"         
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:textSize="15sp"
	        android:textColor="@color/text_color_maroon"
	        android:gravity="center"
	        android:text=""/>       	
    </LinearLayout>
    
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dip">
       	<TextView
	        android:id="@+id/locationTag"         
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:textSize="15sp"
	        android:textColor="@color/text_color_maroon"
	        android:gravity="center"
	        android:text="@string/location"/>
	    <TextView
	        android:id="@+id/locationVal"         
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:textSize="15sp"
	        android:textColor="@color/text_color_maroon"
	        android:gravity="center"
	        android:text=""/>       	
    </LinearLayout>
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dip">
       	<TextView
	        android:id="@+id/dstepsTag"         
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:textSize="15sp"
	        android:textColor="@color/text_color_maroon"
	        android:gravity="center"
	        android:text="@string/dsteps"/>
	    <TextView
	        android:id="@+id/dstepsVal"         
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:textSize="15sp"
	        android:textColor="@color/text_color_maroon"
	        android:gravity="center"
	        android:text=""/>       	
    </LinearLayout>
        
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dip">
       	<TextView
	        android:id="@+id/tstepsTag"         
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:textSize="15sp"
	        android:textColor="@color/text_color_maroon"
	        android:gravity="center"
	        android:text="@string/tsteps"/>
	    <TextView
	        android:id="@+id/tstepsVal"         
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:textSize="15sp"
	        android:textColor="@color/text_color_maroon"
	        android:gravity="center"
	        android:text=""/>       	
    </LinearLayout>  
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dip">
       	<TextView
	        android:id="@+id/milestoneTag"         
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:textSize="15sp"
	        android:textColor="@color/text_color_maroon"
	        android:gravity="center"
	        android:text="@string/milestone"/>
	    <TextView
	        android:id="@+id/milestoneVal"         
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:textSize="15sp"
	        android:textColor="@color/text_color_maroon"
	        android:gravity="center"
	        android:text=""/>       	
    </LinearLayout>         
</LinearLayout>

